tests/transpiler/x/hs/append_builtin.hs
-- Generated by Mochi transpiler v0.10.31 on 2025-07-19 20:04:59 GMT+7
import Data.List (isInfixOf, union, intersect, (\\))
a = [1, 2]

main :: IO ()
main = do
    print (append a 3)
